--- a/FinalYearProject.csproj
+++ b/FinalYearProject.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Photino.NET" Version="1.1.6" />
   </ItemGroup>
 
